Add Hidden Admin Access

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
 </head>
 <body class="text-white">
     <div class="container mx-auto px-6 py-8 max-w-6xl">
+        <!-- Hidden Admin Access - Click logo 5 times -->
+        <div class="fixed top-4 right-4 z-50">
+            <div id="admin-access" onclick="adminClick()" class="w-8 h-8 opacity-20 hover:opacity-40 cursor-pointer transition-opacity">
+                <svg fill="currentColor" viewBox="0 0 24 24" class="text-gray-400">
+                    <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4z"/>
+                </svg>
+            </div>
+        </div>
+
         <!-- Header -->
         <div class="text-center mb-16">
             <div class="floating-icon mb-6">
@@ -681,6 +690,23 @@
                 }, 2000);
             }, 150);
         };
+
+        function adminClick() {
+            adminClickCount++;
+            if (adminClickCount >= 5) {
+                if (confirm('Access admin panel?')) {
+                    window.open('admin.html', '_blank');
+                }
+                adminClickCount = 0;
+            }
+            
+            // Reset counter after 3 seconds of inactivity
+            setTimeout(() => {
+                if (adminClickCount < 5) {
+                    adminClickCount = 0;
+                }
+            }, 3000);
+        }
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96e57691212f2926',t:'MTc1NTA1OTI4MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
