Fix Static Hosting Compatibility

--- a/admin.html
+++ b/admin.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turno Admin - Mission Management</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="api.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
         
@@ -398,8 +397,8 @@
         }
 
         // Auto-refresh every 30 seconds
-        setInterval(async () => {
-            await loadMissions();
+        setInterval(() => {
+            loadMissions();
         }, 30000);
 
         // Initial load
